--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,7 @@
 	url = https://github.com/lowrisc/uncore.git
 [submodule "socip"]
 	path = socip
-	url = https://github.com/lowrisc/socip.git
+	url = https://github.com/nbdd0121/lowrisc-socip.git
 [submodule "junctions"]
 	path = junctions
 	url = https://github.com/lowrisc/junctions.git
